--- a/shallow_fake.yml
+++ b/shallow_fake.yml
@@ -1,72 +1,102 @@
-name: menpo3
+name: env
 channels:
   - conda-forge
-  - roliveira
   - defaults
 dependencies:
-  - bzip2=1.0.8=h01d97ff_1
-  - ca-certificates=2019.9.11=hecc5488_0
-  - certifi=2019.6.16=py36_1
-  - cycler=0.10.0=py_1
-  - cyvlfeat=0.5.1=py36hfd89561_0
-  - dlib=19.18=py36h0739ad7_0
-  - ffmpeg=4.2=h5c2b479_0
-  - freetype=2.10.0=h24853df_1
-  - gettext=0.19.8.1=h46ab8bc_1002
-  - gmp=6.1.2=h0a44026_1000
-  - gnutls=3.6.5=h53004b3_1002
-  - jpeg=9c=h1de35cc_1001
-  - kiwisolver=1.1.0=py36h770b8ee_0
-  - lame=3.100=h1de35cc_1001
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=0_gnu
+  - bzip2=1.0.8=h516909a_2
+  - ca-certificates=2020.1.1=0
+  - certifi=2020.4.5.1=py36_0
+  - cycler=0.10.0=py_2
+  - cyvlfeat=0.5.1=py36hf327ad1_0
+  - dbus=1.13.6=he372182_0
+  - dlib=19.18=py36h5245418_0
+  - expat=2.2.9=he1b5a44_2
+  - ffmpeg=4.2=h167e202_0
+  - fontconfig=2.13.1=h86ecdb6_1001
+  - freetype=2.10.0=he06d7ca_2
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - glib=2.64.2=h6f030ca_0
+  - gmp=6.1.2=hf484d3e_1000
+  - gnutls=3.6.5=hd3a4fd2_1002
+  - gst-plugins-base=1.14.5=h0935bb2_2
+  - gstreamer=1.14.5=h36ae1b5_2
+  - icu=64.2=he1b5a44_1
+  - jpeg=9c=h14c3975_1001
+  - kiwisolver=1.1.0=py36hdb11119_1
+  - lame=3.100=h14c3975_1001
   - libblas=3.8.0=14_openblas
   - libcblas=3.8.0=14_openblas
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h475c297_4
-  - libgfortran=4.0.0=2
-  - libiconv=1.15=h01d97ff_1005
+  - libclang=9.0.1=default_hde54327_0
+  - libcxx=10.0.0=hc9558a2_2
+  - libcxxabi=10.0.0=2
+  - libedit=3.1.20181209=hc058e9b_0
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=9.2.0=h24d8f2e_2
+  - libgfortran=3.0.0=1
+  - libgfortran-ng=7.3.0=hdf63c60_5
+  - libgomp=9.2.0=h24d8f2e_2
+  - libiconv=1.15=h516909a_1006
   - liblapack=3.8.0=14_openblas
-  - libopenblas=0.3.7=h4bb4525_2
-  - libpng=1.6.37=h2573ce8_0
-  - libtiff=4.0.10=hd08fb8f_1003
-  - llvm-openmp=9.0.0=h40edb58_0
-  - lz4-c=1.8.3=h6de7cb9_1001
-  - matplotlib=3.1.1=py36_1
-  - matplotlib-base=3.1.1=py36h3a684a6_1
-  - menpo=0.9.2=py36haf112f3_0
-  - ncurses=6.1=h0a44026_1
-  - nettle=3.4.1=h3efe00b_1002
-  - numpy=1.17.2=py36h6b0580a_0
+  - libllvm9=9.0.1=he513fc3_1
+  - libopenblas=0.3.7=h5ec1e0e_6
+  - libpng=1.6.37=hed695b0_1
+  - libstdcxx-ng=9.2.0=hdf63c60_2
+  - libtiff=4.0.10=h57b8799_1003
+  - libuuid=2.32.1=h14c3975_1000
+  - libxcb=1.13=h14c3975_1002
+  - libxkbcommon=0.10.0=he1b5a44_0
+  - libxml2=2.9.10=hee79883_0
+  - llvm-openmp=9.0.0=hfe2e4e2_0
+  - lz4-c=1.8.3=he1b5a44_1001
+  - matplotlib=3.2.1=0
+  - matplotlib-base=3.2.1=py36hb8e4980_0
+  - menpo=0.9.2=py36h9de70de_1
+  - ncurses=6.1=hf484d3e_1002
+  - nettle=3.4.1=h1bed415_1002
+  - nspr=4.25=he1b5a44_0
+  - nss=3.46=he751ad9_0
+  - numpy=1.17.2=py36h95a1406_0
   - olefile=0.46=py_0
-  - openh264=1.8.0=hd9629dc_1000
-  - openssl=1.1.1c=h01d97ff_0
-  - pillow=5.3.0=py36hbddbef0_1000
+  - openh264=1.8.0=hdbcaa40_1000
+  - openssl=1.1.1g=h7b6447c_0
+  - pcre=8.44=he1b5a44_0
+  - pillow=5.3.0=py36h00a061d_1000
   - pip=19.2.3=py36_0
+  - pthread-stubs=0.4=h14c3975_1001
   - pyparsing=2.4.2=py_0
-  - python=3.6.9=h359304d_0
+  - pyqt=5.12.3=py36hcca6a23_1
+  - python=3.6.9=h265db76_0
   - python-dateutil=2.8.0=py_0
-  - readline=7.0=h1de35cc_5
-  - scipy=1.3.1=py36h7e0e109_2
+  - python_abi=3.6=1_cp36m
+  - qt=5.12.5=h0c104cb_0
+  - readline=7.0=hf8c457e_1001
+  - scipy=1.3.1=py36h921218d_2
   - setuptools=41.4.0=py36_0
-  - six=1.12.0=py36_1000
-  - sqlite=3.30.0=ha441bb4_0
-  - tk=8.6.8=ha441bb4_0
-  - tornado=6.0.3=py36h01d97ff_0
-  - vlfeat=0.9.20=h1de35cc_1002
+  - six=1.12.0=py36_1001
+  - sqlite=3.30.0=h7b6447c_0
+  - tk=8.6.10=hed695b0_0
+  - tornado=6.0.3=py36h516909a_4
+  - vlfeat=0.9.20=h14c3975_1002
   - wheel=0.33.6=py36_0
-  - x264=1!152.20180806=h1de35cc_0
-  - xz=5.2.4=h1de35cc_4
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.4.0=ha9f0a20_0
+  - x264=1!152.20180806=h14c3975_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xz=5.2.4=h516909a_1002
+  - yapf=0.28.0=py_0
+  - zlib=1.2.11=h516909a_1006
+  - zstd=1.4.0=h3b9ef0a_0
   - pip:
-    - joblib==0.14.0
+    - joblib==0.14.1
     - menpodetect==0.6.1
     - menpofit==0.6.1
-    - opencv-python==4.1.1.26
-    - pandas==0.25.2
+    - opencv-python==4.2.0.34
+    - pandas==1.0.3
+    - pyqt5-sip==4.19.18
+    - pyqtwebengine==5.12.1
     - pytz==2019.3
-    - scikit-learn==0.21.3
-    - tqdm==4.36.1
-prefix: /Users/colinrawlings/anaconda3/envs/menpo3
+    - scikit-learn==0.22.2.post1
+    - tqdm==4.45.0
+prefix: /home/colin/anaconda3/envs/env
 
